--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+DBS Projekt Iteration 3
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
@@ -8,6 +9,9 @@
 	<p><b>Waehle im Drop-Down Menue einen Hashtag aus, um den Verlauf des Hashtags ueber die Zeit anzuzeigen</b></p>
   <script src="http://d3js.org/d3.v3.js"></script>
   <script>
+	// 
+	var i = 288;
+///////////////// Drop Down Menu  
   d3.csv("hashtag_dataframe.csv", function(error, data) {
     var select = d3.select("body")
       .append("div")
@@ -23,10 +27,32 @@
       .data(data)
       .enter()
         .append("option")
-        .attr("value", function (d) { return d.value; })
-        .text(function (d) { return d.label; }); // .text gibt text zurueck
-		//<IMG SRC="plot_"+String(d.label)+".png" ALT="Picture" WIDTH=640 HEIGHT=418>
+        .attr("value", function (d) { return "plot_"+String(d.value)+".png"; }) // hier return das richtige Bild!
+        .text(function (d) { return d.label; });
+		//<IMG SRC="plot_"+String(d.value)+".png" ALT="Picture" WIDTH=640 HEIGHT=418> return NULL <- geht nicht
+///////////////////
+  /////////// Plot i darstellen
+  for (i=1;i<428;i++){
+	//document.write("plot_"+String(i)+".png");
+	var width = 200,
+    height = 200;
+
+	var svg = d3.select("body").append("svg")
+		.attr("width", 500)
+		.attr("height", 500);
+
+	var g = svg.append("g");
+
+	var img = g.append("svg:image")
+		.attr("xlink:href", ("plot_"+String(i)+".png"))
+		.attr("width", 200)
+		.attr("height", 200)
+		.attr("x", 228)
+		.attr("y",53);
+		
+	//}
   });
   </script>
+  
 </body>
 </html>
